@@ -20,6 +20,7 @@ import org.junit.jupiter.params.provider.MethodSource;
 import java.lang.ref.Reference;
 import java.lang.reflect.Array;
 import java.util.*;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import static org.junit.jupiter.api.Assertions.*;
@@ -50,6 +51,7 @@ public class TypeCheckerTests  {
     private static final Type INT_TYPE = new Type(Type.TypeEnum.intType);
     private static final Type CONSTANT_INT_TYPE = new Type(Type.TypeEnum.intType, Type.TypePrefixEnum.constant);
     private static final Type INTERFACE_TYPE = new Type(Type.TypeEnum.interfaceType);
+    private static final Type COMPONENT_TYPE = new Type(Type.TypeEnum.componentType);
     //endregion
 
 
@@ -256,6 +258,186 @@ public class TypeCheckerTests  {
     //endregion
 
     //region LinkStatement
+
+    @Test
+    public void CorrectInterfaceTypesAndComponentTypesReturnsVoid() {
+        var expected = VOID_TYPE;
+
+        var scope = mock(Scope.class);
+        var visitor = new TypeCheckerVisitor(scope);
+
+        var comp1Mock = mockForVisitorResult(UCELParser.CompVarContext.class, COMPONENT_TYPE, visitor);
+        var comp2Mock = mockForVisitorResult(UCELParser.CompVarContext.class, COMPONENT_TYPE, visitor);
+
+        var ref1 = mock(DeclarationReference.class);
+        var ref2 = mock(DeclarationReference.class);
+        var decl1 = mock(DeclarationInfo.class);
+        var decl2 = mock(DeclarationInfo.class);
+        when(decl1.getType()).thenReturn(INTERFACE_TYPE);
+        when(decl2.getType()).thenReturn(INTERFACE_TYPE);
+
+        try {
+            when(scope.get(ref1)).thenReturn(decl1);
+            when(scope.get(ref2)).thenReturn(decl2);
+        } catch (Exception e) {
+            fail("error: could not mock scope");
+        }
+
+        var node = mock(UCELParser.LinkStatementContext.class);
+        node.leftInterface = ref1;
+        node.rightInterface = ref2;
+
+        when(node.compVar(0)).thenReturn(comp1Mock);
+        when(node.compVar(1)).thenReturn(comp2Mock);
+
+        var actual = visitor.visitLinkStatement(node);
+
+        assertEquals(expected, actual);
+    }
+
+    @Test
+    public void WrongComponent1TypeReturnsError() {
+        var expected = ERROR_TYPE;
+
+        var scope = mock(Scope.class);
+        var visitor = new TypeCheckerVisitor(scope);
+
+        var comp1Mock = mockForVisitorResult(UCELParser.CompVarContext.class, INTERFACE_TYPE, visitor);
+        var comp2Mock = mockForVisitorResult(UCELParser.CompVarContext.class, COMPONENT_TYPE, visitor);
+
+        var ref1 = mock(DeclarationReference.class);
+        var ref2 = mock(DeclarationReference.class);
+        var decl1 = mock(DeclarationInfo.class);
+        var decl2 = mock(DeclarationInfo.class);
+        when(decl1.getType()).thenReturn(INTERFACE_TYPE);
+        when(decl2.getType()).thenReturn(INTERFACE_TYPE);
+
+        try {
+            when(scope.get(ref1)).thenReturn(decl1);
+            when(scope.get(ref2)).thenReturn(decl2);
+        } catch (Exception e) {
+            fail("error: could not mock scope");
+        }
+
+        var node = mock(UCELParser.LinkStatementContext.class);
+        node.leftInterface = ref1;
+        node.rightInterface = ref2;
+
+        when(node.compVar(0)).thenReturn(comp1Mock);
+        when(node.compVar(1)).thenReturn(comp2Mock);
+
+        var actual = visitor.visitLinkStatement(node);
+
+        assertEquals(expected, actual);
+    }
+
+    @Test
+    public void WrongComponent2TypeReturnsError() {
+        var expected = ERROR_TYPE;
+
+        var scope = mock(Scope.class);
+        var visitor = new TypeCheckerVisitor(scope);
+
+        var comp1Mock = mockForVisitorResult(UCELParser.CompVarContext.class, COMPONENT_TYPE, visitor);
+        var comp2Mock = mockForVisitorResult(UCELParser.CompVarContext.class, INT_TYPE, visitor);
+
+        var ref1 = mock(DeclarationReference.class);
+        var ref2 = mock(DeclarationReference.class);
+        var decl1 = mock(DeclarationInfo.class);
+        var decl2 = mock(DeclarationInfo.class);
+        when(decl1.getType()).thenReturn(INTERFACE_TYPE);
+        when(decl2.getType()).thenReturn(INTERFACE_TYPE);
+
+        try {
+            when(scope.get(ref1)).thenReturn(decl1);
+            when(scope.get(ref2)).thenReturn(decl2);
+        } catch (Exception e) {
+            fail("error: could not mock scope");
+        }
+
+        var node = mock(UCELParser.LinkStatementContext.class);
+        node.leftInterface = ref1;
+        node.rightInterface = ref2;
+
+        when(node.compVar(0)).thenReturn(comp1Mock);
+        when(node.compVar(1)).thenReturn(comp2Mock);
+
+        var actual = visitor.visitLinkStatement(node);
+
+        assertEquals(expected, actual);
+    }
+
+    @Test
+    public void WrongInterface1TypeReturnsError() {
+        var expected = ERROR_TYPE;
+
+        var scope = mock(Scope.class);
+        var visitor = new TypeCheckerVisitor(scope);
+
+        var comp1Mock = mockForVisitorResult(UCELParser.CompVarContext.class, COMPONENT_TYPE, visitor);
+        var comp2Mock = mockForVisitorResult(UCELParser.CompVarContext.class, COMPONENT_TYPE, visitor);
+
+        var ref1 = mock(DeclarationReference.class);
+        var ref2 = mock(DeclarationReference.class);
+        var decl1 = mock(DeclarationInfo.class);
+        var decl2 = mock(DeclarationInfo.class);
+        when(decl1.getType()).thenReturn(INT_TYPE);
+        when(decl2.getType()).thenReturn(INTERFACE_TYPE);
+
+        try {
+            when(scope.get(ref1)).thenReturn(decl1);
+            when(scope.get(ref2)).thenReturn(decl2);
+        } catch (Exception e) {
+            fail("error: could not mock scope");
+        }
+
+        var node = mock(UCELParser.LinkStatementContext.class);
+        node.leftInterface = ref1;
+        node.rightInterface = ref2;
+
+        when(node.compVar(0)).thenReturn(comp1Mock);
+        when(node.compVar(1)).thenReturn(comp2Mock);
+
+        var actual = visitor.visitLinkStatement(node);
+
+        assertEquals(expected, actual);
+    }
+
+    @Test
+    public void WrongInterface2TypeReturnsError() {
+        var expected = ERROR_TYPE;
+
+        var scope = mock(Scope.class);
+        var visitor = new TypeCheckerVisitor(scope);
+
+        var comp1Mock = mockForVisitorResult(UCELParser.CompVarContext.class, COMPONENT_TYPE, visitor);
+        var comp2Mock = mockForVisitorResult(UCELParser.CompVarContext.class, COMPONENT_TYPE, visitor);
+
+        var ref1 = mock(DeclarationReference.class);
+        var ref2 = mock(DeclarationReference.class);
+        var decl1 = mock(DeclarationInfo.class);
+        var decl2 = mock(DeclarationInfo.class);
+        when(decl1.getType()).thenReturn(INTERFACE_TYPE);
+        when(decl2.getType()).thenReturn(INT_TYPE);
+
+        try {
+            when(scope.get(ref1)).thenReturn(decl1);
+            when(scope.get(ref2)).thenReturn(decl2);
+        } catch (Exception e) {
+            fail("error: could not mock scope");
+        }
+
+        var node = mock(UCELParser.LinkStatementContext.class);
+        node.leftInterface = ref1;
+        node.rightInterface = ref2;
+
+        when(node.compVar(0)).thenReturn(comp1Mock);
+        when(node.compVar(1)).thenReturn(comp2Mock);
+
+        var actual = visitor.visitLinkStatement(node);
+
+        assertEquals(expected, actual);
+    }
 
     //endregion
 
@@ -1721,7 +1903,9 @@ public class TypeCheckerTests  {
         UCELParser.IfstatementContext node = mock(UCELParser.IfstatementContext.class);
         var condType = mockForVisitorResult(UCELParser.ExpressionContext.class, STRING_TYPE, visitor);
         var statementType = mockForVisitorResult(UCELParser.StatementContext.class, CHAR_TYPE, visitor);
+        var statements = new ArrayList<UCELParser.StatementContext>() {{ add(statementType); }};
 
+        when(node.statement()).thenReturn(statements);
         when(node.expression()).thenReturn(condType);
         when(node.statement(0)).thenReturn(statementType);
 
@@ -1737,7 +1921,9 @@ public class TypeCheckerTests  {
         UCELParser.IfstatementContext node = mock(UCELParser.IfstatementContext.class);
         var condType = mockForVisitorResult(UCELParser.ExpressionContext.class, BOOL_TYPE, visitor);
         var statementType = mockForVisitorResult(UCELParser.StatementContext.class, CHAR_TYPE, visitor);
+        var statements = new ArrayList<UCELParser.StatementContext>() {{ add(statementType); }};
 
+        when(node.statement()).thenReturn(statements);
         when(node.expression()).thenReturn(condType);
         when(node.statement(0)).thenReturn(statementType);
 
@@ -1754,7 +1940,9 @@ public class TypeCheckerTests  {
         var condType = mockForVisitorResult(UCELParser.ExpressionContext.class, BOOL_TYPE, visitor);
         var statementType1 = mockForVisitorResult(UCELParser.StatementContext.class, CHAR_TYPE, visitor);
         var statementType2 = mockForVisitorResult(UCELParser.StatementContext.class, CHAR_TYPE, visitor);
+        var statements = new ArrayList<UCELParser.StatementContext>() {{ add(statementType1); add(statementType2); }};
 
+        when(node.statement()).thenReturn(statements);
         when(node.expression()).thenReturn(condType);
         when(node.statement(0)).thenReturn(statementType1);
         when(node.statement(1)).thenReturn(statementType2);
@@ -1773,7 +1961,10 @@ public class TypeCheckerTests  {
         var statementType1 = mockForVisitorResult(UCELParser.StatementContext.class, CHAR_TYPE, visitor);
         var statementType2 = mockForVisitorResult(UCELParser.StatementContext.class, ERROR_TYPE, visitor);
 
+        var statements = new ArrayList<UCELParser.StatementContext>() {{ add(statementType1); add(statementType2); }};
+
         when(node.expression()).thenReturn(condType);
+        when(node.statement()).thenReturn(statements);
         when(node.statement(0)).thenReturn(statementType1);
         when(node.statement(1)).thenReturn(statementType2);
 
@@ -1790,7 +1981,9 @@ public class TypeCheckerTests  {
         var condType = mockForVisitorResult(UCELParser.ExpressionContext.class, BOOL_TYPE, visitor);
         var statementType1 = mockForVisitorResult(UCELParser.StatementContext.class, CHAR_TYPE, visitor);
         var statementType2 = mockForVisitorResult(UCELParser.StatementContext.class, VOID_TYPE, visitor);
+        var statements = new ArrayList<UCELParser.StatementContext>() {{ add(statementType1); add(statementType2); }};
 
+        when(node.statement()).thenReturn(statements);
         when(node.expression()).thenReturn(condType);
         when(node.statement(0)).thenReturn(statementType1);
         when(node.statement(1)).thenReturn(statementType2);
@@ -4955,7 +5148,8 @@ public class TypeCheckerTests  {
     }
 
     private static List<Type> allTypesBut(Type unwantedType) {
-        return allTypes().stream().filter(i -> !i.equals(unwantedType)).toList();
+        //TODO toList instead of collect was not recognised
+        return allTypes().stream().filter(i -> !i.equals(unwantedType)).collect(Collectors.toList());
     }
 
 
